# portmanager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
scripts/: build-agents.sh  pm.sh
scripts/verify/: README.md  add_forward.sh  clear_forget.sh  forward_ip.sh  forward_netns.sh  health.sh  lib.sh  run-all.sh
src/: agent.rs  bootstrap.rs  cli.rs  client.rs  config.rs  control.rs  crypto.rs  discovery.rs  doctor.rs  error.rs  firewall.rs  forward.rs  handshake.rs  lib.rs  main.rs  netns.rs  netwatch.rs  proto.rs  supervisor.rs  transport.rs
tests/: agent_process.rs  control_dynamic.rs  loopback.rs  netns_helper.rs
