[package]
name = "portmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
data-encoding = "2.11.0"
directories = "6.0.0"
hex = "0.4.3"
nix = { version = "0.31.3", features = ["net", "socket", "sched", "process", "user", "fs", "uio"] }
procfs = "0.18.0"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rand = "0.10.1"
rcgen = "0.14.7"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "logging", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
